Remove two relevant examples to archive until can be added to make target.

--- a/archive/README
+++ b/archive/README
@@ -1,1 +1,3 @@
-These directories are not built and currently helpd for reference purposes.
+These directories are not built and currently held for reference purposes.
+
+The examples (tx_radar.cpp and protocol) remain valid but are not yet incorporated into a make target.
